--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,7 +30,8 @@
   "homepage": "https://github.com/bvolaya/Frijolitos#readme",
   "dependencies": {
     "@frijol/user-model": "^0.0.0",
-    "fastify": "^3.14.0"
+    "fastify": "^3.14.0",
+    "fastify-cors": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
