--- a/packages/user-model/package.json
+++ b/packages/user-model/package.json
@@ -5,17 +5,13 @@
    "keywords": [],
    "author": "Jonattan Infante Vargas <jonattan@booklick.co>",
    "license": "ISC",
-   "main": "lib/user-model.js",
-   "directories": {
-      "lib": "lib",
-      "test": "__tests__"
-   },
-   "files": [
-      "lib"
-   ],
-   "publishConfig": {
-      "access": "public"
-   },
+  "main": "src/main",
+  "directories": {
+    "src": "src"
+  },
+  "files": [
+    "src"
+  ],
    "repository": {
       "type": "git",
       "url": "git+https://github.com/bvolaya/Frijolitos.git"
