--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@frijol/activity-model": "^0.0.0",
     "@frijol/user-model": "^0.0.0",
+    "@frijoles/search": "^1.0.0",
     "fastify": "^3.14.0",
     "fastify-cors": "^5.2.0"
   },
