--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "node index.js"
   },
   "bugs": {
     "url": "https://github.com/bvolaya/Frijolitos/issues"
@@ -33,7 +33,8 @@
     "@frijol/user-model": "^0.0.0",
     "@frijoles/search": "^1.0.0",
     "fastify": "^3.14.0",
-    "fastify-cors": "^5.2.0"
+    "fastify-cors": "^5.2.0",
+    "metrics": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
