--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "sweetalert2": "^11.0.0",
     "ts-node": "^9.1.1",
     "winston": "^3.3.3"
   }
